[gd_scene load_steps=8 format=3 uid="uid://cxa0t1yohjcop"]

[ext_resource type="Texture2D" uid="uid://ci2r8xy00f4cv" path="res://assets/sprites/level/Clouds (new).png" id="1_e0nub"]
[ext_resource type="Script" uid="uid://chhcb1ei1n642" path="res://scripts/ui/hud/cargo_counter.gd" id="1_rnu65"]
[ext_resource type="Script" uid="uid://d2a2a2psujlun" path="res://scripts/ui/hud/overheat.gd" id="3_2wu1p"]
[ext_resource type="Script" uid="uid://bbl4e828j5yet" path="res://scripts/ui/hud/controls_timer.gd" id="3_e0nub"]
[ext_resource type="Script" uid="uid://rbi2juqyyb1n" path="res://scripts/ui/hud/boost.gd" id="4_4m4yb"]
[ext_resource type="AudioStream" uid="uid://c0lvo1827skrd" path="res://assets/audio/sfx/levels/Lose.wav" id="6_4m4yb"]
[ext_resource type="Script" uid="uid://fnjr0a4lvqpm" path="res://scripts/ui/hud/game_over_timer.gd" id="6_todbw"]

[node name="hud" type="Control" unique_id=1399470084]
z_index = -100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="canvas_layer" type="CanvasLayer" parent="." unique_id=976843883]
layer = -100

[node name="parallax_2d" type="Parallax2D" parent="canvas_layer" unique_id=671016719]
repeat_size = Vector2(2419, 0)
autoscroll = Vector2(100, 0)
repeat_times = 1000

[node name="sprite_2d" type="Sprite2D" parent="canvas_layer/parallax_2d" unique_id=989831253]
position = Vector2(1002, 437)
texture = ExtResource("1_e0nub")

[node name="v_box_container_2" type="VBoxContainer" parent="canvas_layer" unique_id=1224986504]
offset_right = 432.0
offset_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="cargo_counter" type="Label" parent="canvas_layer/v_box_container_2" unique_id=158841415]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Cargo: 0"
script = ExtResource("1_rnu65")

[node name="overheat" type="HBoxContainer" parent="canvas_layer/v_box_container_2" unique_id=2066675837]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="label" type="Label" parent="canvas_layer/v_box_container_2/overheat" unique_id=1003127612]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Overheat"

[node name="progress_bar" type="ProgressBar" parent="canvas_layer/v_box_container_2/overheat" unique_id=814708623]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 1
step = 1.0
rounded = true
script = ExtResource("3_2wu1p")

[node name="boost" type="HBoxContainer" parent="canvas_layer/v_box_container_2" unique_id=224158728]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="label" type="Label" parent="canvas_layer/v_box_container_2/boost" unique_id=98403267]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Boost      "

[node name="progress_bar" type="ProgressBar" parent="canvas_layer/v_box_container_2/boost" unique_id=1461052827]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 1
step = 1.0
rounded = true
script = ExtResource("4_4m4yb")

[node name="v_box_container" type="VBoxContainer" parent="canvas_layer" unique_id=1937738009]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_right = 252.0
offset_bottom = 255.0
grow_horizontal = 2

[node name="label" type="Label" parent="canvas_layer/v_box_container" unique_id=1632421859]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "W/S to accelerate
A/D to turn
SPACE to jump"

[node name="timer" type="Timer" parent="canvas_layer/v_box_container/label" unique_id=1541207853]
wait_time = 5.0
one_shot = true
autostart = true
script = ExtResource("3_e0nub")

[node name="v_box_container_3" type="VBoxContainer" parent="canvas_layer" unique_id=1148460719]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_bottom = 94.0
grow_horizontal = 0
alignment = 1

[node name="timer_label" type="Label" parent="canvas_layer/v_box_container_3" unique_id=1070397606]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Time:"

[node name="game_over_timer" type="Timer" parent="." unique_id=945030734]
wait_time = 60.0
one_shot = true
autostart = true
script = ExtResource("6_todbw")

[node name="lose" type="AudioStreamPlayer" parent="." unique_id=2007963433]
stream = ExtResource("6_4m4yb")
bus = &"SFX"

[connection signal="timeout" from="canvas_layer/v_box_container/label/timer" to="canvas_layer/v_box_container/label/timer" method="_on_timeout"]
[connection signal="timeout" from="game_over_timer" to="game_over_timer" method="_on_timeout"]
